--- a/cdk/package.json
+++ b/cdk/package.json
@@ -17,17 +17,12 @@
     "@types/prettier": "2.6.0",
     "aws-cdk": "2.49.0",
     "aws-lambda": "1.0.7",
-    "jest": "^27.5.1",
-    "ts-jest": "^27.1.4",
+    "esbuild": "0.17.5",
     "ts-node": "^10.9.1",
     "typescript": "~3.9.7"
   },
-  "dependencies": {
-    "@aws-sdk/client-api-gateway": "3.154.0",
-    "@aws-sdk/client-route-53": "3.171.0",
-    "@aws-sdk/client-s3": "3.162.0",
-    "@aws-sdk/client-sts": "3.163.0",
-    "@aws-sdk/credential-providers": "3.163.0",
+  "dependencies": {    
+    "@aws-sdk/client-route-53": "3.171.0",        
     "@types/args": "5.0.0",
     "@types/extract-domain": "2.3.1",
     "@types/js-yaml": "4.0.5",
