fix: CREATE_VPC default value as true
Matching the CREATE_VPC default value with README.md specification.

--- a/samples/vars.yaml
+++ b/samples/vars.yaml
@@ -1,6 +1,6 @@
 ---
 VARIABLES:
-  - CREATE_VPC: false
+  - CREATE_VPC: true
     APP_ENVIRONMENT: Dev
     APP_NAME: reverse-proxy
     ELB_TYPE: NLB
