--- a/samples/vars.yaml
+++ b/samples/vars.yaml
@@ -11,8 +11,8 @@ VARIABLES:
     EXTERNAL_ALB_SG_ID: sg-a1b2c3d4e5f6g7h8i
     EXTERNAL_ENDPOINT_SG_ID: sg-a1b2c3d4e5f6g7h8i
     EXTERNAL_FARGATE_SG_ID: sg-a1b2c3d4e5f6g7h8i
-    TASK_IMAGE: public.ecr.aws/nginx/nginx
-    TASK_IMAGE_TAG: 1.23-alpine-perl
+    TASK_IMAGE: amazonlinux
+    TASK_IMAGE_TAG: 2
     TASK_SCALE_CPU_PCT: 80 
     TASK_SCALE_MIN: 1
     TASK_SCALE_MAX: 2
