updating terraform image

--- a/terraform/docker/Dockerfile
+++ b/terraform/docker/Dockerfile
@@ -2,4 +2,5 @@ ARG PLATFORM
 ARG IMAGE
 FROM --platform=${PLATFORM} ${IMAGE}
 
-RUN amazon-linux-extras install -y nginx1
+RUN amazon-linux-extras install -y nginx1 \
+    && yum clean all
