updating cdk image

--- a/cdk/image/Dockerfile
+++ b/cdk/image/Dockerfile
@@ -1,2 +1,6 @@
-ARG TASK_IMAGE
-FROM ${TASK_IMAGE}
+ARG PLATFORM
+ARG IMAGE
+FROM --platform=${PLATFORM} ${IMAGE}
+
+RUN amazon-linux-extras install -y nginx1 \
+    && yum clean all
