Terraform updates for container entrypoint.

--- a/terraform/docker/Dockerfile
+++ b/terraform/docker/Dockerfile
@@ -3,4 +3,9 @@ ARG IMAGE
 FROM --platform=${PLATFORM} ${IMAGE}
 
 RUN amazon-linux-extras install -y nginx1 \
+    && yum update -y \
     && yum clean all
+
+ADD --chmod=500 entrypoint.sh /entrypoint.sh
+
+ENTRYPOINT [ "/entrypoint.sh" ]
