--- a/cdk/package.json
+++ b/cdk/package.json
@@ -1,42 +1,45 @@
 {
-  "name": "proxy-service",
-  "version": "0.1.0",
-  "bin": {
-    "proxy-service": "bin/Main.js"
-  },
-  "scripts": {
-    "build": "tsc",
-    "watch": "tsc -w",
-    "test": "jest",
-    "cdk": "npx cdk"
-  },
-  "devDependencies": {
-    "@aws-sdk/client-ec2": "3.264.0",
-    "@types/aws-lambda": "8.10.109",
-    "@types/jest": "^27.5.2",
-    "@types/node": "10.17.27",
-    "@types/prettier": "2.6.0",
-    "aws-cdk": "2.49.0",
-    "aws-lambda": "1.0.7",
-    "esbuild": "0.17.5",
-    "ts-node": "^10.9.1",
-    "typescript": "~3.9.7"
-  },
-  "dependencies": {
-    "@aws-sdk/client-route-53": "3.171.0",
-    "@types/args": "5.0.0",
-    "@types/extract-domain": "2.3.1",
-    "@types/js-yaml": "4.0.5",
-    "@types/node": "18.7.14",
-    "@types/string-hash": "1.1.1",
-    "aws-cdk-lib": "2.51.0",
-    "constructs": "^10.1.143",
-    "extract-domain": "2.4.8",
-    "js-yaml": "4.1.0",
-    "npx": "^10.2.2",
-    "parse-domain": "7.0.1",
-    "source-map-support": "^0.5.21",
-    "string-hash": "1.1.3",
-    "ts-command-line-args": "2.3.1"
-  }
+    "name": "proxy-service",
+    "version": "0.1.0",
+    "bin": {
+        "proxy-service": "bin/Main.js"
+    },
+    "scripts": {
+        "build": "tsc",
+        "watch": "tsc -w",
+        "cdk": "npx cdk",
+        "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
+        "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\""
+    },
+    "devDependencies": {
+        "@aws-sdk/client-ec2": "3.264.0",
+        "@types/aws-lambda": "8.10.109",
+        "@types/node": "10.17.27",
+        "@types/source-map-support": "^0.5.6",
+        "@typescript-eslint/eslint-plugin": "^6.0.0",
+        "@typescript-eslint/parser": "^6.0.0",
+        "aws-cdk": "^2.87.0",
+        "aws-lambda": "1.0.7",
+        "eslint": "^8.44.0",
+        "eslint-config-prettier": "^8.8.0",
+        "eslint-plugin-prettier": "^5.0.0",
+        "prettier": "^3.0.0",
+        "typescript": "~3.9.7"
+    },
+    "dependencies": {
+        "@aws-sdk/client-route-53": "3.171.0",
+        "@types/extract-domain": "2.3.1",
+        "@types/js-yaml": "4.0.5",
+        "@types/node": "18.7.14",
+        "@types/string-hash": "1.1.1",
+        "aws-cdk-lib": "2.78.0",
+        "cdk-nag": "^2.27.68",
+        "constructs": "^10.1.143",
+        "extract-domain": "2.4.8",
+        "js-yaml": "4.1.0",
+        "npx": "^10.2.2",
+        "source-map-support": "^0.5.21",
+        "string-hash": "1.1.3",
+        "ts-command-line-args": "2.3.1"
+    }
 }
