--- a/cdk/package.json
+++ b/cdk/package.json
@@ -9,7 +9,7 @@
     "watch": "tsc -w",
     "test": "jest",
     "cdk": "npx cdk",
-    "lint": "eslint --ext .js,.ts .",     
+    "lint": "eslint --ext .js,.ts .",
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\""
   },
   "devDependencies": {
@@ -33,10 +33,12 @@
     "@types/string-hash": "1.1.1",
     "aws-cdk-lib": "2.51.0",
     "constructs": "^10.1.143",
+    "eslint": "^8.44.0",
     "extract-domain": "2.4.8",
     "js-yaml": "4.1.0",
     "npx": "^10.2.2",
     "parse-domain": "7.0.1",
+    "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
     "string-hash": "1.1.3",
     "ts-command-line-args": "2.3.1"
