--- a/cdk/package.json
+++ b/cdk/package.json
@@ -18,6 +18,7 @@
         "@types/jest": "^27.5.2",
         "@types/node": "10.17.27",
         "@types/prettier": "2.6.0",
+        "@types/source-map-support": "^0.5.6",
         "@typescript-eslint/eslint-plugin": "^6.0.0",
         "@typescript-eslint/parser": "^6.0.0",
         "aws-cdk": "2.49.0",
