--- a/.github/workflows/github-actions-validate.yaml
+++ b/.github/workflows/github-actions-validate.yaml
@@ -78,6 +78,10 @@ jobs:
         working-directory: ${{ env.working-directory }}        
         run: |
           npm run lint
+      - name: Security scan
+        working-directory: ${{ env.working-directory }}
+        run: |
+          npx cdk synth --no-staging
       - name: Commit cdk changes
         id: tfcommit
         working-directory: ${{ env.working-directory }}
