--- a/cdk/package.json
+++ b/cdk/package.json
@@ -7,7 +7,6 @@
     "scripts": {
         "build": "tsc",
         "watch": "tsc -w",
-        "test": "jest",
         "cdk": "npx cdk",
         "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
         "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\""
@@ -21,7 +20,7 @@
         "@types/source-map-support": "^0.5.6",
         "@typescript-eslint/eslint-plugin": "^6.0.0",
         "@typescript-eslint/parser": "^6.0.0",
-        "aws-cdk": "2.49.0",
+        "aws-cdk": "^2.87.0",
         "aws-lambda": "1.0.7",
         "esbuild": "0.17.5",
         "eslint": "^8.44.0",
@@ -38,12 +37,14 @@
         "@types/js-yaml": "4.0.5",
         "@types/node": "18.7.14",
         "@types/string-hash": "1.1.1",
-        "aws-cdk-lib": "2.51.0",
+        "aws-cdk-lib": "2.78.0",
+        "cdk-nag": "^2.27.68",
         "constructs": "^10.1.143",
         "eslint-plugin-cdk": "^1.8.0",
         "extract-domain": "2.4.8",
         "js-yaml": "4.1.0",
         "npx": "^10.2.2",
+        "ntypescript": "1.201706190042.1",
         "parse-domain": "7.0.1",
         "source-map-support": "^0.5.21",
         "string-hash": "1.1.3",
