--- a/cdk/package.json
+++ b/cdk/package.json
@@ -20,6 +20,7 @@
         "@typescript-eslint/parser": "^6.0.0",
         "aws-cdk": "^2.87.0",
         "aws-lambda": "1.0.7",
+        "esbuild": "0.18.16",
         "eslint": "^8.44.0",
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-prettier": "^5.0.0",
