--- a/cdk/package.json
+++ b/cdk/package.json
@@ -23,6 +23,7 @@
     "aws-lambda": "1.0.7",
     "esbuild": "^0.18.16",
     "eslint": "^8.45.0",
+    "eslint-config-prettier": "^8.9.0",
     "eslint-config-standard-with-typescript": "^37.0.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^16.0.1",
