--- a/.gitignore
+++ b/.gitignore
@@ -390,8 +390,8 @@ crash.log
 crash.*.log
 
 # Exclude all .tfvars files, which are likely to contain sensitive data, such as
-# password, private keys, and other secrets. These should not be part of version 
-# control as they are data points which are potentially sensitive and subject 
+# password, private keys, and other secrets. These should not be part of version
+# control as they are data points which are potentially sensitive and subject
 # to change depending on the environment.
 *.tfvars
 *.tfvars.json
@@ -417,3 +417,7 @@ terraform.rc
 config/*.yaml
 tfsec-checksums.txt
 tfsec-linux-amd
+ignore
+*.js
+!eslintrc.js
+!.prettierrc.js
