remove extra files and update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -416,8 +416,6 @@ terraform.rc
 # Ignore locally generated files
 config/*.yaml
 tfsec-checksums.txt
-tfsec-linux-amd
+tfsec-linux-amd64
 ignore
-*.js
-!eslintrc.js
-!.prettierrc.js
+outputs/
